--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+.pointer{
+	cursor: pointer;
+}
+
+.i
+{
+	font-style: italic;
+}
+
+.b
+{
+	font-weight: bold;
+}
