--- a/src/app/pages/custom-camera/custom-camera.component.html
+++ b/src/app/pages/custom-camera/custom-camera.component.html
@@ -1,14 +1,18 @@
+<video autoplay="" id="video" style="width:100%"></video>
 <div class="container-fluid">
-	Version 1.2
+	Version 1.6
 	<div class="row">
-		<div class="col-4">
+		<div class="col-3">
 			<button class="btn btn-primary" type="button" (click)="onGetUserMediaButtonClick($event)">Start</button>
 		</div>
-		<div class="col-4">
+		<div class="col-3">
 			<button class="btn btn-primary" type="button"(click)="onTakePhotoButtonClick($event)">Foto</button>
 		</div>
+		<div class="col-3">
+			<button class="btn btn-primary" type="button"(click)="onTakePhotoButtonClick($event)">PhotoCanvas</button>
+		</div>
 
-		<div class="col-4">
+		<div class="col-3">
 			<button class="btn btn-primary" type="button"(click)="stopVideo()">stop</button>
 		</div>
 		<div class="col-12">
@@ -19,14 +23,19 @@
 		</div>
 	</div>
 
-	<video autoplay="" id="video" style="width:200px;height:200px"></video>
-	<canvas id="takePhotoCanvas" style="width:100%;height:400px"></canvas>
+	<div style="border: 1px solid black;"><canvas id="takePhotoCanvas" style="width:100%;height:400px"></canvas></div>
+
 	<div class="form-group">
-		<select name="foo" class="form-control">
+		<select name="cameraid" class="form-control" (change)="onCameraChange($event)">
 			<option *ngFor="let d of devices" [value]="d.deviceId">{{d.kind}} - {{d.deviceId}}-{{d.label}}</option>
 		</select>
 	</div>
 
+	<h3>Devices</h3>
+
+	<div class="border-bottom" *ngFor="let d of devices">
+		<pre>{{ d | json }}</pre>
+	</div>
 
 	<!-- <h2>Video Capabilities</h2>
 	<div *ngFor="let v of raw_video_capabilities | keyvalue" class="border-bottom">
