--- a/src/app/pages/custom-camera/custom-camera.component.html
+++ b/src/app/pages/custom-camera/custom-camera.component.html
@@ -9,7 +9,7 @@
 			<button class="btn btn-primary" type="button"(click)="onTakePhotoButtonClick($event)">Foto</button>
 		</div>
 		<div class="col-3">
-			<button class="btn btn-primary" type="button"(click)="onTakePhotoButtonClick($event)">PhotoCanvas</button>
+			<button class="btn btn-primary" type="button"(click)="drawCanvasVideo()">PhotoCanvas</button>
 		</div>
 
 		<div class="col-3">
