--- a/src/app/pages/capturar-evidencia3/capturar-evidencia3.component.html
+++ b/src/app/pages/capturar-evidencia3/capturar-evidencia3.component.html
@@ -1,5 +1,10 @@
 <div style="width:100%;overflow:hidden;">
-	<div style="position:relative" id="video_container"><video autoplay="" id="video" style="width:384px;"></video><div style="position:absolute;bottom:100px;left:10%;border:1px solid red;width:80%;"><img src="/assets/ratio.png" style="width:100%" id="image_mask"></div></div>
+	<div style="position:relative" id="video_container">
+		<video autoplay="" id="video" style="width:384px;"></video>
+		<div style="position:absolute;bottom:100px;left:10%;border:1px solid red;width:80%;">
+			<img src="/assets/ratio.png" style="width:100%" id="image_mask">
+		</div>
+	</div>
 	<!-- div style="position:relative;"><img src="/assets/ratio.png" style="width:100%" id="image_ratio"><canvas id="canvas_2" style="position:absolute;top:0;left:0;right:0;bottom:0"></canvas></div-->
 	<div>Version 1.36</div>
 	<div class="container-fluid">
